--- a/React_Java/pom.xml
+++ b/React_Java/pom.xml
@@ -42,6 +42,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+	<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-entitymanager</artifactId>
+    <version>5.6.12.Final</version>
+</dependency>
+		
 	</dependencies>
 
 	<build>
